updated until journey. About and contact remains. Change images to HD

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Fit Bit</div>
+                                <div class="portfolio-caption-subheading text-muted">Their groundbreaking campaigns garnered over 500M impressions and $20M!</div>
                             </div>
                         </div>
                     </div>
@@ -115,8 +115,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
+                                <div class="portfolio-caption-heading">Nike</div>
+                                <div class="portfolio-caption-subheading text-muted">They said Lets do it! And, we did it! $35M in revenue in less tha 60 days.</div>
                             </div>
                         </div>
                     </div>
@@ -130,8 +130,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Tesla</div>
+                                <div class="portfolio-caption-subheading text-muted">Subtle, stylish and stunning, just like their cars! These campaigns garnered over 100M views and over $40M in revenue!</div>
                             </div>
                         </div>
                     </div>
@@ -145,8 +145,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">Coco-Cola</div>
+                                <div class="portfolio-caption-subheading text-muted">Cheers b'coz we landed a huge win with this one!</div>
                             </div>
                         </div>
                     </div>
@@ -160,8 +160,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">Apple</div>
+                                <div class="portfolio-caption-subheading text-muted">The tech giant and The Mill partnered for an ad-campaign with creative privacy that was a commercial and business hit!</div>
                             </div>
                         </div>
                     </div>
@@ -175,8 +175,8 @@
                                 <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-heading">Chanel</div>
+                                <div class="portfolio-caption-subheading text-muted">This was luxury, fashion and all things young! The campaign garnered over 100k customers and DR.</div>
                             </div>
                         </div>
                     </div>
@@ -187,8 +187,8 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">The Journey</h2>
+                    <h3 class="section-subheading text-muted">The Mill.</h3>
                 </div>
                 <ul class="timeline">
                     <li>
